[project]
name = "gorzdrav-api-async"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dnspython>=2.8.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "validators>=0.35.0",
]
