[project]
name = "gorzdrav-api-async"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocache>=0.12.3",
    "dnspython>=2.8.0",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "uvicorn>=0.40.0",
    "validators>=0.35.0",
]
